# retirement-index-strategies

./: README.md  pyproject.toml  requirements.txt
docs/: index.md
src/: Index-based Retirement Strategies.ipynb
src/retirement_index_strategies/: Index_Filters_Leverage.py  main.py
tests/: test_main.py
