[project]
name = "retirement-index-strategies"
version = "0.1.0"
description = "A project for retirement index strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "plotly",
    "matplotlib",
]

[project.scripts]
retirement-index-strategies = "retirement_index_strategies.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retirement_index_strategies"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
